docs/tests/parser/declarations/valid/VarDeclFuncPtr.src
fn void test() {
    let fp int(int, int) add;
    let fp void() action;
    let fp float(float, float) compute;
}
