docs/tests/parser/declarations/invalid/VarDeclDoubleComma.src
fn void test() {
    let int a,, b;
}
